; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_context.c_OPENSSL_CTX_free.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_context.c_OPENSSL_CTX_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OPENSSL_CTX_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @context_deinit(i32* %6)
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @OPENSSL_free(i32* %9)
  ret void
}

declare dso_local i32 @context_deinit(i32*) #1

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
